--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "cube-scrambler-mcp",
   "version": "0.0.1",
   "type": "module",
-  "main": "./dist/index.js",
-  "bin": {
-    "cube-scrambler-mcp": "./dist/index.js"
-  },
+  "bin": "./dist/index.js",
   "files": [
     "dist"
   ],
